Attempts to fix a clipping issue with the intro text
There is an issue where parts of the text are hidden and the hover effect doesnt apply to them, attempting to fix it currently so saving this as a checkpoint to come back to if something gets broken

--- a/verstappen/src/styles/IntroStyles/IntroText.css
+++ b/verstappen/src/styles/IntroStyles/IntroText.css
@@ -5,8 +5,8 @@
     translate: -50% -50%;
     text-align: center;
     z-index: 10;
-    width: 90%;
-    max-width: 1100px;
+    width: 100%;
+    max-width: 1200px;
 
     will-change: opacity, filter, margin-top;
 }
